--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,8 @@ python-jose==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 pydantic==2.5.3
+
+django>=4.2
+djangorestframework
+djangorestframework-simplejwt
+django-cors-headers
