feat(app): implement Django backend models, JWT auth, DRF API, and Android client integration
Backend (Django + DRF + JWT)
--------------------------------
- Se crean los modelos principales:
  • Producto
  • Lista
  • DetalleLista
  • NegocioPromocionado
  Todos integrados con el modelo User de Django.

- Se añaden serializers para todos los modelos.
- Se implementa registro y login de usuario usando JWT (djoser/simplejwt).
- Se desarrollan ViewSets y rutas DRF con permisos adecuados
  y lógica de acceso basada en roles.

Android (Kotlin + Retrofit + Jetpack)
----------------------------------------
- Configuración de Retrofit con manejo automático de JWT
  (interceptor, refresh/attach tokens).

- Implementación de pantallas:
  • LoginActivity (validación + almacenamiento seguro del token vía DataStore)
  • RegisterActivity (validaciones y envío de datos al backend)

- HomeActivity integrada con Jetpack Navigation:
  • Secciones: Listas, Perfil, Promociones.
  • Flujo completo tras el login.

Este commit integra el backend completo con autenticación JWT
y el cliente Android totalmente funcional consumiendo los endpoints.

--- a/app_android/app/build.gradle
+++ b/app_android/app/build.gradle
@@ -23,6 +23,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -48,6 +52,8 @@ dependencies {
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.2"
+
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
