--- a/app_android/app/build.gradle
+++ b/app_android/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
