--- a/app_android/app/build.gradle
+++ b/app_android/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
 
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
