feat(android): add Room local persistence for offline lists and integrate repository caching
Se implementa la capa de persistencia local usando Room para permitir
visualizar listas guardadas y soportar funcionamiento sin conexión.

Cambios principales:

1) build.gradle
   - Se agrega el plugin `kotlin-kapt`.
   - Se añaden dependencias de Room (runtime, ktx, compiler) y Gson
     para serialización de campos complejos.

2) Base de datos local (Room)
   - ListaEntity: representación local de listas.
   - ListaDao: operaciones de inserción, consulta y reemplazo.
   - AppDatabase: base de datos Room con configuración centralizada.

3) Repositorio actualizado
   - ListaRepository ahora recibe contexto de aplicación.
   - Caching automático: cada lista descargada desde la API se guarda
     en Room, permitiendo:
        • acceso offline
        • menor carga de red
   - En ausencia de internet, se devuelve el contenido local.

4) Cambios en la capa de presentación
   - ListaViewModel ahora extiende AndroidViewModel para recibir contexto.
   - Se inicializa el repositorio dentro del ViewModel.
   - Resto de clases adaptadas para trabajar con Room + Gson.
   - Proyecto compilando sin errores de lint.

5) Funcionalidad actual
   - Escaneo → API → Repository → UI → guardado local.
   - Se puede desconectar internet y seguir viendo las listas almacenadas.

Próximas acciones sugeridas:
   A. Mostrar listado completo de “Listas guardadas” usando el DAO.
   B. Persistir productos favoritos y el límite de presupuesto.
   C. Actualizar README y diagramas con la arquitectura actual.
   D. Correr pruebas instrumentadas y backend (end-to-end).

--- a/app_android/app/build.gradle
+++ b/app_android/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -43,6 +44,7 @@ dependencies {
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.11'
 
     // Room (optional cache)
