feat(android): add basic Lista UI with RecyclerView, actions and ViewModel integration
Se incorpora la interfaz básica de la pantalla de Lista, lista para
pruebas end-to-end con el backend y el escáner.

Archivos añadidos / modificados

1) Layouts
- layout/item_detalle.xml:
    • Diseño de cada fila del producto.
    • Incluye nombre, cantidad, subtotal y botón/eliminación vía callback.

- layout/activity_lista.xml:
    • Pantalla principal de Lista.
    • Contiene RecyclerView, total, límite, botón de aplicar promo
      y FAB para agregar productos vía escaneo.

2) Adaptador
- ui/DetalleAdapter.kt:
    • RecyclerView adapter actualizado.
    • Callback onDelete(productId) para eliminar ítems desde la UI.

3) Pantalla principal
- ui/ListaActivity.kt:
    • Conecta ListaViewModel y observa cambios en la lista actual.
    • Lanza AddProductoActivity (escáner) y agrega ítems al volver.
    • Actualiza totales, aplica promoción, muestra alertas y errores.
    • Maneja estado de límite y favoritos desde el ViewModel.

4) Manifest
- AndroidManifest.xml:
    • Registro de ListaActivity como pantalla accesible desde la app.

Resultado
La UI de Lista queda completamente operativa para pruebas:
visualización, agregado/eliminación, aplicación de promos, escaneo
y actualización dinámica del total.

Lista para continuar con mejoras de UI, validaciones o navegación.

--- a/app_android/app/src/main/AndroidManifest.xml
+++ b/app_android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.AddProductoActivity"/>
+        <activity android:name=".ui.ListaActivity"/>
     </application>
 
 </manifest>
