--- a/app_android/app/src/main/AndroidManifest.xml
+++ b/app_android/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity android:name=".ui.AddProductoActivity"/>
         <activity android:name=".ui.ListaActivity"/>
+        <activity android:name=".ui.PerfilActivity"/>
     </application>
 
 </manifest>
