feat(android): add Home screen with saved lists, navigation and list loading flow
Se finaliza la pantalla Home para gestionar las listas guardadas y
convertirla en el punto de entrada principal de la app.

Cambios principales

1) UI y navegación
- HomeActivity.kt:
    • Muestra todas las listas del usuario vía RecyclerView.
    • FAB “+” crea una nueva lista abriendo ListaActivity sin ID.
    • Al tocar un ítem, abre ListaActivity cargando la lista existente.

- activity_home.xml:
    • Layout con RecyclerView y FAB para creación rápida.

2) Adaptadores
- ListaOverviewAdapter.kt:
    • Adaptador para mostrar título, total y fecha de cada lista.
    • Callback integrado para abrir la lista seleccionada.

3) Capa de datos
- ListRepository:
    • todasMisListas(): obtiene todas las listas vía GET /listas/.
    • obtenerLista(id): carga una lista específica.

4) ViewModel
- ListaViewModel:
    • cargarLista(id) y mapeo DTO → modelo de dominio.

5) Pantalla de lista
- ListaActivity:
    • Si recibe LISTA_ID, carga la lista existente para edición.

6) Configuración
- AndroidManifest:
    • HomeActivity pasa a ser la nueva LAUNCHER de la app.

Cómo probar
1) Instalar y abrir la app → aparece Home.
2) Ver listas guardadas (o vacío si aún no hay).
3) Pulsar “+”:
   • Se crea nueva lista → escanear, guardar, volver a Home.
4) Tocar una lista existente → se abre en modo edición.

Resultado
La pantalla Home está completamente operativa y cierra el bloque de
funcionalidades principales: creación, edición, persistencia y navegación
entre listas.

--- a/app_android/app/src/main/AndroidManifest.xml
+++ b/app_android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,12 @@
         <activity android:name=".ui.ListasActivity" />
         <activity android:name=".ui.PromocionesActivity" />
         <activity android:name=".ui.PerfilActivity" />
-        <activity android:name=".ui.HomeActivity" />
+        <activity android:name=".ui.HomeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ui.RegistroActivity" />
         <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.SplashActivity"
